[package]
name = "room"
version = "1.0.0"
edition = "2021"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
clearscreen = "1.0.10"
rand = "0.8.5"
